Adding RMarkdown & the visulizations images

--- a/Cyclistic_Capstone1.Rmd
+++ b/Cyclistic_Capstone1.Rmd
@@ -1,11 +1,33 @@
-#Installing the packages
+---
+title: "Cyclistic_Capstone1"
+author: "Mostafa"
+date: "2023-07-29"
+output: html_document
+---
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE)
+options(repos = "https://cran.rstudio.com/")  # Set the CRAN mirror URL
+
+```
+
+
+
+## Preparing Phase | Setting up my enviroment 
+### Installing the packages
+```{r Installing the packages, message=FALSE, warning=FALSE}
 install.packages("tidyverse")
 install.packages("readr")
 install.packages("janitor")
 install.packages("tidyr")
 install.packages("dplyr")
 install.packages("ggplot2")
-#Loading the packages
+
+```
+
+
+
+### Loading the packages
+```{r}
 library(tidyverse)
 library(readr)
 library(janitor)
@@ -13,8 +35,12 @@ library(tidyr)
 library(dplyr)
 library(ggplot2)
 
+```
 
-#Importing & naming the datasets| name = read_csv("file_name")
+
+
+### Importing & naming the datasets
+```{r}
 Jan2021= read_csv("CyclisticTripdata202101.csv")
 Feb2021= read_csv("CyclisticTripdata202102.csv")
 Mar2021= read_csv("CyclisticTripdata202103.csv")
@@ -27,7 +53,14 @@ Sep2021= read_csv("CyclisticTripdata202109.csv")
 Oct2021= read_csv("CyclisticTripdata202110.csv")
 Nov2021= read_csv("CyclisticTripdata202111.csv")
 Dec2021= read_csv("CyclisticTripdata202112.csv")
-#Check the data type of the datasets' fields| str("dataset_name")
+```
+
+
+
+## Process Phase | Cleaning the datasets
+
+### Check the data type
+```{r}
 str(Jan2021)
 str(Feb2021)
 str(Mar2021)
@@ -40,82 +73,169 @@ str(Sep2021)
 str(Oct2021)
 str(Nov2021)
 str(Dec2021)
+```
 
-#Creating the dataframe| name = bind_rows(all_datasets)
+
+
+### Creating the dataframe
+```{r}
 MonthlyTrip_df = bind_rows(Jan2021,Feb2021, Mar2021, Apr2021,May2021,June2021,July2021,Aug2021,Sep2021,Oct2021,Nov2021,Dec2021)
+```
 
-#Cleaning columns names
+
+
+### Cleaning columns names
+```{r}
 MonthlyTrip_df = clean_names(MonthlyTrip_df)
+```
 
-#Removing all the full empty columns and rows
+
+
+### Removing all the full empty columns and rows
+```{r}
 MonthlyTrip_df = remove_empty(MonthlyTrip_df, which = c())
+```
 
-#Removing duplicates
+
+
+### Removing duplicates
+```{r}
 MonthlyTrip_df = unique(MonthlyTrip_df)
+```
 
-#Check on the set of values in member_casual field
+
+
+### Check on the set of values in member_casual field
+```{r}
 all(MonthlyTrip_df$member_casual %in% c("member","casual"))
 
-#Removing leading & trailing spaces
+```
+
+
+### Removing leading & trailing spaces
+```{r}
 MonthlyTrip_df %>% 
   mutate_all(trimws)
-#Removing in between excessive spaces
+```
+
+
+### Removing in between excessive spaces
+```{r}
 MonthlyTrip_df %>% 
   mutate_all(~gsub("\\s+"," ", .))
+```
 
 
-#Extracting weekday with wday() and creating day_of_week new column
+
+To answer some of the business tasks I need to extract the following:
+
+* Weekdays
+* Hours
+* Months
+
+And  in the same context, calculate the tripduration
+
+### Extracting weekday with wday() and creating day_of_week new column
+```{r}
 MonthlyTrip_df$day_of_week= wday(MonthlyTrip_df$started_at, label = T, abbr = F)
+```
 
 
-#Extracting Time-Hour with as.POSIXct() and creating starting_hour new column
+
+
+### Extracting Time-Hour
+```{r}
 MonthlyTrip_df$starting_hour = format(as.POSIXct(MonthlyTrip_df$started_at),"%H")
 
+```
 
-#Extracting month with as.Date()
+
+
+### Extracting Month
+```{r}
 MonthlyTrip_df$starting_month = format(as.Date(MonthlyTrip_df$started_at), "%m")
 
+```
 
 
-#Calculate tripduration = ended_at - started_at
+
+
+### Calculate tripduration
+```{r}
 MonthlyTrip_df$tripduration = difftime(MonthlyTrip_df$ended_at,MonthlyTrip_df$started_at,units= "min")
-#Converting "tripduration" from difftime to numeric
+```
+
+
+Converting "tripduration" from difftime to numeric
+```{r}
 MonthlyTrip_df$tripduration = as.numeric(MonthlyTrip_df$tripduration)
 
+```
 
-#Removing data with tripduration =< 0
+
+
+Removing data with tripduration =< 0
+```{r}
 MonthlyTrip_df = MonthlyTrip_df[!(MonthlyTrip_df$tripduration<=0),]
 
-#Check for tripduration outliers using boxplot()
+```
+
+
+### tripduration outliers
+```{r}
 boxplot(MonthlyTrip_df$tripduration)
 q1 = quantile(MonthlyTrip_df$tripduration,0.25)
 q3= quantile(MonthlyTrip_df$tripduration,0.75)
 iqr = IQR(MonthlyTrip_df$tripduration)
 Cleaned_MonthlyTrip_df = MonthlyTrip_df %>% 
   filter(!(MonthlyTrip_df$tripduration> q3 +1.5*iqr | MonthlyTrip_df$tripduration< q1 -1.5*iqr))
-#Check on tripduration statistics summary after filtration
+```
+
+
+  
+Tripduration statistics summary before filtration
+```{r}
 summary(MonthlyTrip_df$tripduration)
+```
+Tripduration statistics summary before filtration
+```{r}
 summary(Cleaned_MonthlyTrip_df$tripduration)
+```
 
 
-#Creating cleaned csv data file to use it later in Tableau
+
+
+
+
+*Creating cleaned csv data file to use it later in Tableau*
+```{r}
 write.csv(Cleaned_MonthlyTrip_df, file= "Cyclistic_trips.csv")
+```
 
 
 
 
-#Creating viz for Number of Rides for Member Type in Weekdays
-#We use options(scipen =) to remove scientific values from our graphs
-options(scipen = 1000)
+
+
+## Analysis and Visulizations
+
+**For the business tasks I need analyze & visualize the following to distinguish differences between the users**
+
+###  Number of Rides for User Type in Weekdays
+```{r}
 ggplot(data = Cleaned_MonthlyTrip_df) + 
   geom_bar(mapping = aes(x= day_of_week, fill = member_casual), position = "dodge") +
   labs(x = "Weekday", y = "Number of Rides", fill = "Member Type", title = "Number of Rides for Member Type in Weekdays")+
   theme(axis.text = element_text(size = 6))
 ggsave("number_of_rides_for_member_type_weekdays.png")
+```
 
 
 
-#Creating viz for Number of Rides for Member Type in Months
+
+
+### Number of Rides for Member Type in Months
+```{r}
 options(scipen = 1000)
 ggplot(data = Cleaned_MonthlyTrip_df) + 
   geom_bar(mapping = aes(x= starting_month, fill = member_casual), position = "dodge") +
@@ -123,9 +243,13 @@ ggplot(data = Cleaned_MonthlyTrip_df) +
   theme(axis.text = element_text(size = 7))
 ggsave("number_of_rides_for_member_type_months.png")
 
+```
 
 
-#Creating viz for Number of Rides for Member Type per daily hrs
+
+
+### Number of Rides for Member Type per daily hrs
+```{r}
 options(scipen = 1000)
 ggplot(data = Cleaned_MonthlyTrip_df) + 
   geom_bar(mapping = aes(x= starting_hour, fill = member_casual), position = "dodge") +
@@ -133,10 +257,14 @@ ggplot(data = Cleaned_MonthlyTrip_df) +
   theme(axis.text = element_text(size = 7)) + 
   facet_wrap(~day_of_week)
 ggsave("number_of_rides_for_member_type_hours.png")
+```
 
 
 
-#The average trip duration within weekdays viz between casuals & members
+
+
+### The average trip duration within weekdays viz between casuals & members
+```{r}
 average_tripduration = Cleaned_MonthlyTrip_df %>% 
   group_by(day_of_week, member_casual) %>% 
   summarise(avg_tripduration= mean(tripduration))
@@ -147,9 +275,13 @@ ggplot(data = average_tripduration) +
   labs(x = "Weekday", y = "AVG Trip Duration in sec.", fill = "Member Type", title = "Average Trip Duration in Seconds") +
   theme(axis.text = element_text(size = 7))
 ggsave("avg_tripduration_seconds.png")
+```
 
 
-#arrange the top 10 stations for the number of trips for members
+
+
+### The top 10 stations for the number of trips for members
+```{r message=FALSE, warning=FALSE}
 Cleaned_MonthlyTrip_df %>%
   filter(member_casual=="member" & !is.na(start_station_name)) %>% 
   count(start_station_name) %>%
@@ -160,9 +292,12 @@ Cleaned_MonthlyTrip_df %>%
   geom_text(mapping = aes(y = reorder(start_station_name, n), x = n, label = n), vjust = -0.5) +
   labs(x = "Count") +
   theme(axis.text = element_text(size = 7))
-ggsave("top_10_stations_member.png")
+```
 
-#arrange the top 10 stations for the number of trips for casuals
+
+  
+### The top 10 stations for the number of trips for casuals
+```{r}
 Cleaned_MonthlyTrip_df %>%
   filter(member_casual=="casual" & !is.na(start_station_name)) %>% 
   count(start_station_name) %>%
@@ -175,10 +310,6 @@ Cleaned_MonthlyTrip_df %>%
   theme(axis.text = element_text(size = 7))
 ggsave("top_10_stations_casual.png")
 
-
-
-
-
-
+```
 
 
